gap fixed

--- a/css/form.css
+++ b/css/form.css
@@ -419,7 +419,12 @@ span>i {
     /* flex-direction: column; */
     gap: 8px;
   }
+#buynow-form .wrapper .form-container .payment-info .payment-section .form-row .forgap{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 
+}
   #buynow-form .wrapper .form-container .customer-info .form-group {
     width: 100%;
     gap: 5px;
